Setting auto-play to true

--- a/www/views/app/feeds/category-feeds.html
+++ b/www/views/app/feeds/category-feeds.html
@@ -19,7 +19,7 @@
     <br>
     <div class="specials">
       <div class="content">
-        <ion-slide-box active-slide="today()-1" show-pager="false" does-continue="true" auto-play="false">
+        <ion-slide-box active-slide="today()-1" show-pager="false" does-continue="true" auto-play="true">
           <ion-slide ng-repeat="i in [1,2,3,4,5,6,7]">
             <div class="item-icon-left item-icon-right">
               <h3>{{day_name(i)}}</h3>
