--- a/www/views/auth/walkthrough.html
+++ b/www/views/auth/walkthrough.html
@@ -2,7 +2,7 @@
   <ion-content scroll="false">
     <div class="page-content">
       <img ng-src="img/barbotextbelow.svg" class="logo"/>
-      <div ui-sref="app.feeds-categories" class="btn-facebook"/>
+      <div class="btn-facebook"/>
       <div class="login-form">
         <label class="uname-label">Email</label>
         <input type="email" placeholder="Email" class="uname-field"/>
