--- a/scss/feed/feeds-categories.styles.scss
+++ b/scss/feed/feeds-categories.styles.scss
@@ -12,6 +12,15 @@
 		background-color: rgba(0, 0, 0, 0);
 	}
 
+	.spinner svg {
+		position: absolute;
+		left: 50%;
+		top: 200px;
+		width: 50px;
+		height: 50px;
+		stroke: #fff;
+	}
+
 	position: absolute;
 	height: 100%;
 	width: 100%;
