--- a/www/views/app/feeds/category-feeds.html
+++ b/www/views/app/feeds/category-feeds.html
@@ -3,23 +3,23 @@
     <img class="logo-on-top" src="img/barbo.svg" />
   </ion-nav-buttons>
   <ion-nav-title>
-    <span class="header-text">{{venue.strName}}</span>
+    <span class="header-text">{{venue.getName()}}</span>
   </ion-nav-title>
-  <ion-content>
+  <ion-content lazy-scroll>
     <div class="venue-details item-thumbnail-left">
-      <img class="glow-img" ng-src="{{venue.strLogo}}">
-      <h2>{{venue.strName}}</span></h2>
-      <p>{{venue.strAddress}}</p>
-      <p>{{venue.intCity}}, {{venue.strState}}</p>
+      <img class="glow-img" ng-src="{{venue.getLogo()}}">
+      <h2>{{venue.getName()}}</span></h2>
+      <p>{{venue.getAddress()}}</p>
+      <p>{{venue.getCity()}}, {{venue.getState()}}</p>
       <br>
-      <p ng-if="venue.strPhone!='NULL'">{{venue.strPhone}}</p>
+      <p ng-if="venue.getPhone()!='NULL'">{{venue.getPhone()}}</p>
     </div>
     <br>
     <div class="heading">Going on now</div>    
     <br>
     <div class="specials">
       <div class="content">
-        <ion-slide-box active-slide="today()-1" show-pager="false" does-continue="true" auto-play="true">
+        <ion-slide-box active-slide="today" show-pager="false" does-continue="true" auto-play="true">
           <ion-slide ng-repeat="i in [1,2,3,4,5,6,7]">
             <div class="item-icon-left item-icon-right">
               <h3>{{day_name(i)}}</h3>
