Adding FB login support and integrating various pages with it

--- a/scss/miscellaneous/maps.styles.scss
+++ b/scss/miscellaneous/maps.styles.scss
@@ -6,6 +6,14 @@
 	  	display: none;
 	}
 
+	.marker-label,
+	.marker-icon { {
+		-webkit-filter: drop-shadow(12px 12px 25px rgba(0,0,0,0.5));
+	    filter: url(#drop-shadow);
+	    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+	    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+	}
+
 	.glow-img {
 
 		max-width: 80px !important;
