--- a/www/views/app/side-menu.html
+++ b/www/views/app/side-menu.html
@@ -17,10 +17,10 @@
         <ion-item class="heading-item item item-avatar" nav-clear menu-close ui-sref="app.profile">
           <div class="user-image-container">
             <pre-img ratio="_1_1" helper-class="rounded-image">
-              <img class="user-image" ng-src="https://s3.amazonaws.com/uifaces/faces/twitter/brynn/128.jpg" spinner-on-load>
+              <img class="user-image" ng-src="{{user.picture}}" spinner-on-load>
           	</pre-img>
           </div>
-          <h2 class="greeting">Hi Brynn</h2>
+          <h2 class="greeting">Hi {{firstName()}}</h2>
           <p class="message">Welcome back</p>
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.bookmarks">
