--- a/www/views/app/profile.html
+++ b/www/views/app/profile.html
@@ -7,18 +7,19 @@
       <div class="profile-container">
         <div class="user-image-container">
           <pre-img ratio="_1_1" helper-class="rounded-image">
-            <img class="user-image" ng-src="https://s3.amazonaws.com/uifaces/faces/twitter/brynn/128.jpg" spinner-on-load>
+            <img class="user-image" ng-src="{{user.picture}}" spinner-on-load>
           </pre-img>
         </div>
-        <div class="user-name">Brynn Evans</div>
-        <div class="user-twitter">@brynn</div>
+        <div class="user-name">{{user.profileInfo.name}}</div>
+        <!--div class="user-twitter">@brynn</div-->
       </div>
       <div class="user-background-image-outer">
-        <div multi-bg="['https://s3.amazonaws.com/uifaces/faces/twitter/brynn/128.jpg']"></div>
+        <div multi-bg="['{{user.picture}}']"></div>
       </div>
     </div>
     <div class="bottom-content">
       <div class="user-bio">
+        <p><b>{{user.profileInfo.bio}}</b></p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
       </div>
     </div>
