--- a/scss/sidemenu/side-menu.styles.scss
+++ b/scss/sidemenu/side-menu.styles.scss
@@ -1,5 +1,16 @@
+@font-face {
+	font-family:"Lobster_1_4";
+	src:url("../fonts/Lobster_1_4/Lobster_1_4.eot?") format("eot"),
+		url("../fonts/Lobster_1_4/Lobster_1_4.woff") format("woff"),
+		url("../fonts/Lobster_1_4/Lobster_1_4.ttf") format("truetype"),
+		url("../fonts/Lobster_1_4/Lobster_1_4.svg#Lobster1.4") format("svg");
+	font-weight:normal;
+	font-style:normal;
+}
+
 ion-side-menu
 {
+
 	ion-content
 	{
 		background-color: darken($main-menu-bg, 12);
@@ -35,7 +46,7 @@ ion-side-menu
 		.menu-text
 		{
 			color: darken($main-menu-color, 20);
-			font-weight:500;
+			font-weight: 500;
 		}
 	}
 
