Overhauling the settings screen's css

--- a/scss/miscellaneous/maps.styles.scss
+++ b/scss/miscellaneous/maps.styles.scss
@@ -7,7 +7,7 @@
 	}
 
 	.marker-label,
-	.marker-icon { {
+	.marker-icon {
 		-webkit-filter: drop-shadow(12px 12px 25px rgba(0,0,0,0.5));
 	    filter: url(#drop-shadow);
 	    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
